// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Drawer should render properly with some props assigned 1`] = `
=======
exports[`Drawer should render with many props assigned 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<div
  className="test-class visible"
>
  <div
    className="content"
  >
    Test
  </div>
</div>
`;

<<<<<<< HEAD
exports[`Drawer should render with just required props passed 1`] = `
=======
exports[`Drawer should render with required props 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<div
  className="hidden"
>
  <div
    className="content"
  >
    Test
  </div>
</div>
`;
